--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -30,7 +30,11 @@ dependencies:
   cupertino_icons: ^1.0.0
 
   #to get position where user has tapped
-  positioned_tap_detector: ^1.0.3
+  positioned_tap_detector_2: ^1.0.4
+  positioned_tap_detector: ^1.0.3 #old version
+
+  #confetti for celebration
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
